fixed alignment and text issue on responsive

--- a/src/App.css
+++ b/src/App.css
@@ -1033,14 +1033,6 @@ a:hover, a:active {
     .mg-top-15-si {
         margin-top:0px !important;
     }
-    .or {
-        font-size: 9px !important;
-    }
-    .bottom-icons {
-        margin-left: 3% !important;
-        font-size: 9px !important;
-        padding: 4px 5px !important;
-    }
     .footer-store-logo1 > img {
         width: 42% !important;
     }
